# scraper

./: README.md  pyproject.toml  scraper.py
scraper/: __init__.py  __main__.py  content_extractor.py  js_manager.py  page_automator.py  scraping_config.py  url_normalizer.py  web_scraper.py
scraper/js/: extract_links.js  extract_tables.js  extract_text.js  scroll.js
